<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Account Book</string>
    <string name="home_title">Home</string>
    <string name="home_subtitle">Cash Flow Overview</string>
    <string name="monthly_spending">Monthly Spending</string>
    <string name="expense_total_label">Expense</string>
    <string name="income_total_label">Income</string>
    <string name="remaining_label">Remaining</string>
    <string name="budget_progress">Budget Progress</string>
    <string name="month_selector_text">Mar 2026</string>
    <string name="chart_title">Last 15 Days Summary</string>
    <string name="window_7_days">7d</string>
    <string name="window_15_days">15d</string>
    <string name="day_ledger_title">Daily Ledger</string>
    <string name="no_transaction_hint">No transactions for this day</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_title">Add Entry</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="select_date">Select Date</string>
    <string name="note_hint">Note</string>
    <string name="category_title">Category</string>
    <string name="keypad_title">Keypad</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="backspace_key">Backspace</string>
    <string name="default_amount">&#165;0.00</string>
    <string name="budget_of">of &#165;%1$s</string>
    <string name="budget_percent">%1$d%%</string>
    <string name="budget_of_default">of &#165;1,500.00</string>
    <string name="budget_percent_default">0%</string>
    <string name="trend_summary">Income: %1$s | Expense: %2$s</string>
    <string name="trend_summary_default">Income: 0.00 | Expense: 0.00</string>
    <string name="back">Back</string>
    <string name="delete_transaction">Delete</string>
    <string name="delete_transaction_confirm">Delete this transaction?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="transaction_actions">Actions</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_amount">Please enter an amount greater than 0.</string>
    <string name="currency_picker_title">Select Currency</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="edit_category">Edit Category</string>
    <string name="add_category">Add Category</string>
    <string name="category_name_label">Category Name</string>
    <string name="category_name_hint">Enter name…</string>
    <string name="category_color_label">Color</string>
    <string name="category_icon_label">Icon</string>
    <string name="category_name_empty">Please enter a name</string>
    <string name="category_added">Category added</string>
    <string name="category_updated">Category updated</string>
    <string name="category_update_failed">Update failed, please try again</string>
    <string name="category_deleted">Category deleted</string>
    <string name="dialog_delete_category_title">Delete Category</string>
    <string name="dialog_delete_category_subtitle">This category will be permanently removed. Existing transactions will be moved to the "Other" category.</string>
    <string name="category_limit_reached">Cannot exceed 20 categories</string>
    <string name="icon_group_food">Food &amp; Drink</string>
    <string name="icon_group_shopping">Shopping &amp; Lifestyle</string>
    <string name="icon_group_transport">Transport</string>
    <string name="icon_group_entertainment">Entertainment</string>
    <string name="icon_group_health">Health &amp; Sports</string>
    <string name="icon_group_home">Home &amp; Living</string>
    <string name="icon_group_education">Education &amp; Work</string>
    <string name="icon_group_finance">Finance</string>
    <string name="icon_group_communication">Communication &amp; Social</string>
    <string name="icon_group_pets">Pets &amp; Nature</string>
    <string name="icon_group_travel">Travel</string>
    <string name="icon_group_beauty">Beauty</string>
    <string name="icon_group_tech">Technology &amp; Gadgets</string>
    <string name="icon_group_weather">Weather &amp; Seasons</string>
    <string name="icon_group_misc">Misc</string>
</resources>
